# elu

./: .gitignore  Cargo.toml
.complex/: events.jsonl  graph.json
.complex/issues/: 0CZW.md  3idQ.md  6zSs.comments.json  6zSs.md  7Yrh.md  7u2u.md  9BsS.md  BfF6.md  CGHD.md  Cdea.md  FiBu.comments.json  FiBu.md  GjSE.md  JO58.md  KbJk.md  KiZj.md  LuMQ.md  MqEx.md  SZS1.md  ShLa.md  SnIt.md  Vhoq.md  WKIW.LszD.comments.json  WKIW.LszD.md  WKIW.Oe2G.comments.json  WKIW.Oe2G.md  WKIW.QV3o.md  WKIW.VJp1.comments.json  WKIW.VJp1.md  WKIW.ar0g.comments.json  WKIW.ar0g.md  WKIW.jfvm.comments.json  WKIW.jfvm.md  WKIW.lMYk.comments.json  WKIW.lMYk.md  WKIW.md  WKIW.wX0h.comments.json  WKIW.wX0h.md  WKIW.zRCQ.comments.json  WKIW.zRCQ.md  (+24 more)
.complex/nodes/: 0CZW.json  3idQ.json  6zSs.json  7Yrh.json  7u2u.json  9BsS.json  BfF6.json  CGHD.json  Cdea.json  FiBu.json  GjSE.json  JO58.json  KbJk.json  KiZj.json  LuMQ.json  MqEx.json  SZS1.json  ShLa.json  SnIt.json  Vhoq.json  WKIW.LszD.json  WKIW.Oe2G.json  WKIW.QV3o.json  WKIW.VJp1.json  WKIW.ar0g.json  WKIW.jfvm.json  WKIW.json  WKIW.lMYk.json  WKIW.wX0h.json  WKIW.zRCQ.json  WfTG.json  Wn8v.json  ZGmX.json  bP11.json  cXJm.json  ccUO.json  dYpY.json  ehrJ.json  fqtS.json  hnkX.json  (+10 more)
.github/workflows/: pages.yml
crates/elu-author/: Cargo.toml
crates/elu-author/src/: build.rs  check.rs  explain.rs  infer.rs  init.rs  lib.rs  report.rs  schema.rs  sensitive.rs  tar_det.rs  walk.rs  watch.rs
crates/elu-author/src/templates/: native.toml  ox_persona.toml  ox_runtime.toml  ox_skill.toml
crates/elu-author/tests/: build.rs  build_check.rs  build_strict.rs  check.rs  explain.rs  init_builtin.rs  init_from.rs  init_template.rs  schema.rs  sensitive.rs  tar_det.rs  walk.rs  watch.rs
crates/elu-cli/: Cargo.toml
crates/elu-cli/src/: cli.rs  error.rs  global.rs  lockfile.rs  main.rs  manifest_reader.rs  output.rs  refs_parse.rs  source.rs
crates/elu-cli/src/cmd/: add.rs  build.rs  check.rs  completion.rs  config.rs  explain.rs  fsck.rs  gc.rs  import.rs  init.rs  inspect.rs  install.rs  lock.rs  ls.rs  mod.rs  publish.rs  refs.rs  remove.rs  schema.rs  search.rs  stack.rs  stub.rs  update.rs
crates/elu-cli/tests/: add.rs  build.rs  build_watch.rs  completion.rs  config.rs  determinism.rs  e2e_happy_path.rs  explain_diff.rs  explain_inspect.rs  gc_fsck.rs  import.rs  init_check.rs  init_template.rs  install_multi.rs  lock.rs  ls_refs.rs  publish.rs  remove.rs  roundtrip.rs  schema.rs  search_publish.rs  skeleton.rs  stack_multi.rs  stack_outputs.rs  stubs.rs  update.rs
crates/elu-cli/tests/common/: mod.rs
crates/elu-hooks/: Cargo.toml
crates/elu-hooks/src/: error.rs  interpolate.rs  lib.rs  mode.rs  path.rs
crates/elu-hooks/src/ops/: chmod.rs  copy.rs  delete.rs  index.rs  mkdir.rs  mod.rs  move_op.rs  patch.rs  symlink.rs  template.rs  write.rs
crates/elu-hooks/tests/: interpolate.rs  mode.rs  ops.rs  path_safety.rs  run_rejection.rs
crates/elu-import/: Cargo.toml
crates/elu-import/src/: apt.rs  cache.rs  error.rs  fetch.rs  lib.rs  manifest_build.rs  npm.rs  pip.rs  tar_layer.rs
crates/elu-layers/: Cargo.toml
crates/elu-layers/src/: apply.rs  error.rs  lib.rs  stack.rs  whiteout.rs
crates/elu-layers/tests/: apply_dirs.rs  apply_files.rs  apply_overwrite.rs  apply_symlinks.rs  encodings.rs  flatten.rs  opaque.rs  stack_hook.rs  stack_merge.rs  stack_modes.rs  stack_rollback.rs  stage.rs  unsafe_paths.rs  whiteouts.rs
crates/elu-layers/tests/common/: mod.rs
crates/elu-manifest/: Cargo.toml
crates/elu-manifest/src/: canonical.rs  error.rs  lib.rs  parse.rs  types.rs  validate.rs
crates/elu-manifest/tests/: canonical_json.rs  edge_cases.rs  toml_roundtrip.rs  validate.rs
crates/elu-outputs/: Cargo.toml
crates/elu-outputs/src/: dir.rs  error.rs  lib.rs  tar.rs
crates/elu-outputs/src/qcow2/: base.rs  finalize.rs  mod.rs
crates/elu-outputs/tests/: dir_basic.rs  dir_force.rs  dir_owner_mode.rs  infer_format.rs  qcow2_base.rs  qcow2_errors.rs  qcow2_raw.rs  tar_basic.rs  tar_compression.rs  tar_partial.rs  tar_reproducible.rs  tar_symlinks.rs
crates/elu-outputs/tests/common/: mod.rs
crates/elu-registry/: Cargo.toml
crates/elu-registry/src/: blob_store.rs  error.rs  lib.rs  source.rs  types.rs
crates/elu-registry/src/client/: fallback.rs  mod.rs  publish.rs  verify.rs
crates/elu-registry/src/db/: mod.rs  sqlite.rs
crates/elu-registry/src/server/: auth.rs  error.rs  fetch.rs  mod.rs  namespace.rs  publish.rs  search.rs
crates/elu-registry/tests/: client_publish.rs  client_verify.rs  fallback_chain.rs  publish_atomic.rs  publish_fetch.rs  publish_immutable.rs  search.rs  server_integration.rs  types_serde.rs  visibility.rs
crates/elu-resolver/: Cargo.toml
crates/elu-resolver/src/: error.rs  lib.rs  lockfile.rs  resolve.rs  source.rs  types.rs  version.rs
crates/elu-resolver/tests/: conflict_diagnostics.rs  fetch_plan.rs  hash_ref_bypass.rs  lockfile_honored.rs  lockfile_mismatch.rs  lockfile_serde.rs  offline_mode.rs  single_root.rs  topological_order.rs  update_lockfile.rs  verify_lockfile.rs
crates/elu-resolver/tests/common/: mod.rs
crates/elu-stacker/: Cargo.toml
crates/elu-stacker/src/: error.rs  lib.rs  stage.rs
crates/elu-stacker/tests/: flatten.rs  stack_hook.rs  stack_merge.rs  stack_modes.rs  stack_rollback.rs  stage.rs
crates/elu-store/: Cargo.toml
crates/elu-store/src/: atomic.rs  error.rs  fs_store.rs  hash.rs  hasher.rs  lib.rs  magic.rs  store.rs
crates/elu-store/tests/: concurrent.rs  fsck.rs  gc.rs  hash_roundtrip.rs  put_blob.rs  put_get.rs  refs.rs
docs/design/: README.md  authoring.md  hooks.md  layers.md  manifest.md  overview.md  store.md
docs/prd/: README.md  authoring.md  cli.md  consumers.md  hooks.md  importers.md  layers.md  manifest.md  outputs.md  registry.md  resolver.md  seguro.md  store.md
site/: index.html  style.css
