[package]
name = "elu-author"
version = "0.1.0"
edition = "2024"

[dependencies]
elu-manifest = { path = "../elu-manifest" }
elu-registry = { path = "../elu-registry" }
elu-store = { path = "../elu-store" }
camino = "1"
globset = "0.4"
notify = "6"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
