[package]
name = "elu-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "elu"
path = "src/main.rs"

[dependencies]
elu-author = { path = "../elu-author" }
elu-hooks = { path = "../elu-hooks" }
elu-import = { path = "../elu-import" }
elu-manifest = { path = "../elu-manifest" }
elu-registry = { path = "../elu-registry" }
elu-store = { path = "../elu-store" }

camino = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
