[package]
name = "elu-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "elu"
path = "src/main.rs"

[dependencies]
elu-author = { path = "../elu-author" }
elu-hooks = { path = "../elu-hooks" }
elu-import = { path = "../elu-import" }
elu-layers = { path = "../elu-layers" }
elu-manifest = { path = "../elu-manifest" }
elu-outputs = { path = "../elu-outputs" }
elu-registry = { path = "../elu-registry" }
elu-resolver = { path = "../elu-resolver" }
elu-stacker = { path = "../elu-stacker" }
elu-store = { path = "../elu-store" }

camino = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "5"
notify = "6"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
axum = "0.8"
http-body-util = "0.1"
predicates = "3"
serde_json = "1"
serde_norway = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
url = "2"
