[package]
name = "elu-hooks"
version = "0.1.0"
edition = "2024"

[dependencies]
elu-manifest = { path = "../elu-manifest" }
elu-store = { path = "../elu-store" }
camino = "1"
globset = "0.4"
walkdir = "2"
diffy = "0.4"
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
