[package]
name = "elu-import"
version = "0.1.0"
edition = "2024"

[dependencies]
elu-manifest = { path = "../elu-manifest" }
elu-store = { path = "../elu-store" }
ar = "0.9"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
toml = "0.8"
xz2 = "0.1"
zip = "2"

[dev-dependencies]
camino = "1"
