[package]
name = "elu-layers"
version = "0.1.0"
edition = "2024"

[dependencies]
elu-hooks = { path = "../elu-hooks" }
elu-manifest = { path = "../elu-manifest" }
elu-resolver = { path = "../elu-resolver" }
elu-store = { path = "../elu-store" }

camino = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"
thiserror = "2"
zstd = "0.13"

[dev-dependencies]
elu-store = { path = "../elu-store" }
semver = "1"
toml = "0.8"
