[package]
name = "elu-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
elu-manifest = { path = "../elu-manifest" }
elu-store = { path = "../elu-store" }

axum = "0.8"
base64 = "0.22"
rusqlite = { version = "0.35", features = ["bundled"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
camino = "1"
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
