[package]
name = "elu-store"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
camino = "1"
tempfile = "3"
thiserror = "2"
bytes = "1"
fs2 = "0.4"
flate2 = "1"
zstd = "0.13"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
filetime = "0.2"
flate2 = "1"
